@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.2-2
-Date: 2011-05-01
+Date: 2011-05-02
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
