@@ -1,4 +1,5 @@
 0.2-2
+- velocityStatistics() added
 - new names: oceApprox() integerToAscii() rangeLimit() ctdRaw
 - topoInterpolate() added
 - numberAsPOSIXct(): add type 'argos'
